--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ main .main-header {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 3rem;
+     padding: 0 10px;
 }
 
 main .main-header .h1 {
